--- a/app/src/main/res/layout/scanlist_qbss_item.xml
+++ b/app/src/main/res/layout/scanlist_qbss_item.xml
@@ -84,6 +84,25 @@
                 android:textColor="@android:color/black"
                 android:text="1.0 %" />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.2"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:hint="   RSSI:" />
+            <TextView
+                android:id="@+id/per_device_rssi"
+                android:layout_width="0dp"
+                android:layout_weight="0.8"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:textColor="@android:color/black"
+                android:text="" />
+        </LinearLayout>
     </LinearLayout>
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
